do select chenjh-2022-04-03

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,6 @@
 appname = webcron
 httpport = 8000
-runmode = dev
+runmode = prod  # prod-生产环境   dev-开发模式
 
 # 允许同时运行的任务数
 jobs.pool = 10
@@ -11,9 +11,9 @@ site.name = 定时任务管理器
 # 数据库配置
 db.host = 127.0.0.1
 db.user = root
-db.password = "" 
-db.port = 3306
-db.name = webcron
+db.password = root
+db.port = 31866
+db.name = db_webcron
 db.prefix = t_
 db.timezone = Asia/Shanghai
 
@@ -24,4 +24,6 @@ mail.host = smtp.example.com
 mail.port = 25
 mail.user = username
 mail.password = your password
+
+#EnableAdmin = true
 
